# wsme

./: .gitignore  .gitreview  .hgignore  .hgtags  MANIFEST.in  README  README.md  README.rst  requirements-py3.txt  requirements.txt  setup.cfg  setup.py  tox-tmpl.ini  tox.ini  toxgen.py
doc/: Makefile  api.rst  changes.rst  conf.py  document.rst  functions.rst  gettingstarted.rst  index.rst  integrate.rst  make.bat  protocols.rst  requirements.txt  todo.rst  types.rst
doc/_static/: toggle.css  toggle.js  wsme.css
ews/: __init__.py  controller.py  rest.py  restjson.py
ews/tests/: test_controller.py
examples/demo/: client.py  demo.cfg  demo.py  setup.cfg  setup.py  sporeclient.py
tests/: test_cornice.py  test_flask.py  test_sphinxext.py  test_tg1.py  test_tg15.py  test_types.py
tests/pecantest/: config.py  setup.cfg  setup.py
tests/pecantest/test/: app.py
tests/pecantest/test/controllers/: root.py  ws.py
tests/pecantest/test/model/: __init__.py
tests/pecantest/test/tests/: __init__.py  config.py  test_ws.py
tests/rest/: test_args.py
tests/sphinxexample/: conf.py  document.rst  index.rst
wsme/: __init__.py  api.py  controller.py  cornice.py  exc.py  pecan.py  protocol.py  release.py  rest.py  restjson.py  restxml.py  root.py  runtime.py  soap.py  sphinxext.py  spore.py  tg1.py  tg11.py  tg15.py  types.py  utils.py  wsgi.py
wsme/protocols/: __init__.py  commons.py  rest.py  restjson.py  restxml.py  soap.py
wsme/protocols/templates/: wsdl.html
wsme/rest/: __init__.py  args.py  json.py  protocol.py  xml.py
wsme/templates/: fault.html  soap.html  wsdl.html
wsme/tests/: protocol.py  test_api.py  test_controller.py  test_exc.py  test_protocols.py  test_protocols_commons.py  test_release.py  test_restjson.py  test_restxml.py  test_root.py  test_soap.py  test_spore.py  test_types.py  test_utils.py
wsmeext/: cornice.py  flask.py  pecan.py  sphinxext.py  tg1.py  tg11.py  tg15.py  utils.py
wsmeext/extdirect/: __init__.py  datastore.py  protocol.py  sadatastore.py
wsmeext/soap/: __init__.py  protocol.py  simplegeneric.py  wsdl.py
wsmeext/sqlalchemy/: controllers.py  types.py
wsmeext/tests/: test_extdirect.py  test_soap.py  test_sqlalchemy_controllers.py  test_sqlalchemy_types.py  test_utils.py
