[metadata]
name = WSME
version = 0.4b1

author = "Christophe de Vienne"
author-email = "python-wsme@googlegroups.com"

summary = Web Services Made Easy makes it easy to
 implement multi-protocol webservices.

description-file = README.rst

url = http://bitbucket.org/cdevienne/wsme

license = MIT

classifier =
        Development Status :: 3 - Alpha
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2.5
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.2
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        License :: OSI Approved :: MIT License
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Software Development :: Libraries :: Python Modules

requires = 
    six
    simplegeneric

[entry_points]
wsme.protocols =
    restjson = wsme.protocols.restjson:RestJsonProtocol
    restxml = wsme.protocols.restxml:RestXmlProtocol

[metadata:python_version == '2.5']
requires = WebOb <= 1.1.1

[metadata:python_version == '2.6' or python_version == '2.7']
requires = WebOb

[metadata:python_version != '2.5' and python_version != '2.6' and python_version != '2.7']
requires = WebOb >= 1.2b3

[files]
packages =
    wsme
    wsme.protocols
    wsme.tests

extra_files =
    setup.py
    README.rst


[egg_info]
tag_build = dev
tag_date = true

[aliases]
release = egg_info -RDb ''

[nosetests]
#with-coverage = true
#cover-package = wsme
