[metadata]
name = WSME
version = 0.5b3

author = "Christophe de Vienne"
author-email = "python-wsme@googlegroups.com"

summary = Simplify the writing of REST APIs, and extend them with additional protocols.

description-file = README.rst

url = http://bitbucket.org/cdevienne/wsme

license = MIT

classifier =
        Development Status :: 3 - Alpha
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2.5
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.2
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        License :: OSI Approved :: MIT License
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
wsme.protocols =
    rest = wsme.rest.protocol:RestProtocol
    restjson = wsme.rest.protocol:RestProtocol
    restxml = wsme.rest.protocol:RestProtocol
	soap = wsmeext.soap:SoapProtocol
    extdirect = wsmeext.extdirect:ExtDirectProtocol

[files]
packages =
    wsme
    wsme.rest
    wsme.tests
    wsmeext
    wsmeext.extdirect
    wsmeext.soap
    wsmeext.sqlalchemy
    wsmeext.tests

namespace_packages =
    wsmeext

extra_files =
    setup.py
    README.rst


[egg_info]
tag_build = dev
tag_date = true

[aliases]
release = egg_info -RDb ''

[nosetests]
#with-coverage = true
#cover-package = wsme
