[metadata]
name = WSME

author = "Christophe de Vienne"
author-email = "python-wsme@googlegroups.com"

summary = Simplify the writing of REST APIs, and extend them with additional protocols.

description-file = README.rst

url = https://github.com/stackforge/wsme

license = MIT

classifier =
        Development Status :: 3 - Alpha
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        License :: OSI Approved :: MIT License
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
wsme.protocols =
    rest = wsme.rest.protocol:RestProtocol
    restjson = wsme.rest.protocol:RestProtocol
    restxml = wsme.rest.protocol:RestProtocol
    soap = wsmeext.soap:SoapProtocol
    extdirect = wsmeext.extdirect:ExtDirectProtocol

[files]
packages =
    wsme
    wsmeext

namespace_packages =
    wsmeext

extra_files =
    setup.py
    README.rst
    tests

[wheel]
# WSME has different requirements depending on the version of Python
# being used, so we cannot build universal wheels.
universal = 0
